--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
 	<title>Progression Trigger Demo</title>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	<script>
+		(function(d) {
+			var e = d.createElement('script');
+			e.src = '//dev.bounceexchange.com/bounce/i.js?client_id=211';
+			e.async = true;
+			d.getElementsByTagName("head")[0].appendChild(e);
+		 }(document));
+	</script>
 </head>
 <body>
 <style>
