Changes button names and adds button classes for a, b, and start

--- a/index.html
+++ b/index.html
@@ -450,9 +450,9 @@
 <div id="controllerOut">
   <div class="cable"></div>
   <div id="controllerInner">
-  	<div class="btn btn-top"></div>
+  	<div class="btn btn-up"></div>
   	<div class="btn btn-right"></div>
-  	<div class="btn btn-bottom"></div>
+  	<div class="btn btn-down"></div>
   	<div class="btn btn-left"></div>
     <div class="left">
       <div class="arrow">
@@ -485,7 +485,7 @@
       <div class="bar bText">
         <ul>
           <li>SELECT</li>
-          <li>START</li>
+          <li class="btn-start">START</li>
         </ul>
       </div>
       <div class="bar buttonBar">
@@ -505,11 +505,11 @@
       </h3>
       <ul class="rightButtons">
           <li>
-            <div class="circ"></div>
+            <div class="circ btn-b"></div>
             <span class="buttNums">B</span>
           </li>
           <li>
-            <div class="circ"></div>
+            <div class="circ btn-a"></div>
             <span class="buttNums aButt">A</span>
           </li>
       </ul>
