Fixes class names for up and down

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 	.btn:active {
 		border: 2px solid green;
 	}
-	.btn-top {
+	.btn-up {
 	    left: 56px;
 	    top: 34px;
 	}
@@ -438,7 +438,7 @@
 	    left: 88px;
 	    top: 67px;
 	}
-	.btn-bottom {
+	.btn-down {
     	bottom: 34px;
 		left: 56px;
 	}
