Moves start button class to actual button and not text field

--- a/index.html
+++ b/index.html
@@ -485,14 +485,14 @@
       <div class="bar bText">
         <ul>
           <li>SELECT</li>
-          <li class="btn-start">START</li>
+          <li>START</li>
         </ul>
       </div>
       <div class="bar buttonBar">
         <div class="buttonBarInner">
           <ul>
             <li><!--##--></li>
-            <li><!--##--></li>
+            <li class="btn-start"><!--##--></li>
           </ul>
         </div>
       </div><!--end buttonBar-->
