--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 	  height: 200px;
 	  margin: 0 auto;
 	  border-top: solid 4px #d2d6d7;
-	  top: 150px;
+	  top: 142px;
 	  box-shadow: 0 12px 12px 0 rgba(0, 0, 0, 0.55);
 	  border-radius: 9px;
 	}
@@ -446,6 +446,10 @@
 		left: 23px;
 		top: 67px;
 	}
+	.attribution {
+		position: absolute;
+		bottom: 0;
+	}
 </style>
 <div id="controllerOut">
   <div class="cable"></div>
@@ -516,6 +520,7 @@
     </div><!--End Right-->
   </div>
 </div>
-<h2 class="underText">- Nintendo Controller By Ben -</h2>
+<h2 class="underText">If you don't know what to do, then you are too young for this site</h2>
+<h6 class="attribution">- Nintendo Controller shamelessly borrowed from - <a href="http://codepen.io/BenjaminVilina/pen/GgEoez" target="_blank">Ben</a> -</h6>
 </body>
 </html>
