Makes clicking a, b, and start more clear

--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
 	  -webkit-transition: all 0.05s;
 	  -moz-transition: all 0.05s;
 	  transition: all 0.05s;
+	  background: linear-gradient(#00ff00, #0faa0f) left repeat;
 	  box-shadow: 0 2px 2px 0 #323232;
 	  cursor: pointer;
 	}
@@ -410,6 +411,7 @@
 	  -webkit-transition: all 0.1s;
 	  -moz-transition: all 0.1s;
 	  transition: all 0.1s;
+	  background: linear-gradient(#00ff00, #0faa0f) left repeat;
 	  cursor: pointer;
 	}
 	#controllerOut #controllerInner .right .rightButtons li .buttNums {
